--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
     <nav>
         <figure>
             <img id="logo" src="./assets/wclogo.webp" alt="">
-         </figure>
-         <div class="hamburger-menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+        </figure>
     </nav>
     <section>
         <div id="location_input">
@@ -37,76 +32,21 @@
             <div id="weather-condition"></div>
             <div id="humidity"></div>
             <div id="wind"></div>
-            <!-- Add more elements as needed -->
         </div>
+    </section>
+    <section id="hr-section">
+        <h1>24 Hour Forecast</h1>
+        <div id="hr-container"></div>
     </section>
     <section id="forecast-section">
-        <div id="forecast-container">
-            <div id="date1">
-                <div id="day1"></div>
-                <div id="temp1low"></div>
-                <div id="temp1high"></div>
-                <img id="weather-icon1" src="" alt="">
-                <div id="weather-condition1"></div>
-                <div id="humidity1"></div>
-                <div id="wind1"></div>
-            </div>
-            <div id="date2">
-                <div id="day2"></div>
-                <div id="temp2low"></div>
-                <div id="temp2high"></div>
-                <img id="weather-icon2" src="" alt="">
-                <div id="weather-condition2"></div>
-                <div id="humidity2"></div>
-                <div id="wind2"></div>
-            </div>
-            <div id="date3">
-                <div id="day3"></div>
-                <div id="temp3low"></div>
-                <div id="temp3high"></div>
-                <img id="weather-icon3" src="" alt="">
-                <div id="weather-condition3"></div>
-                <div id="humidity3"></div>
-                <div id="wind3"></div>
-            </div>
-            <div id="date4">
-                <div id="day4"></div>
-                <div id="temp4low"></div>
-                <div id="temp4high"></div>
-                <img id="weather-icon4" src="" alt="">
-                <div id="weather-condition4"></div>
-                <div id="humidity4"></div>
-                <div id="wind4"></div>
-            </div>
-            <div id="date5">
-                <div id="day5"></div>
-                <div id="temp5low"></div>
-                <div id="temp5high"></div>
-                <img id="weather-icon5" src="" alt="">
-                <div id="weather-condition5"></div>
-                <div id="humidity5"></div>
-                <div id="wind5"></div>
-            </div>
-            <div id="date6">
-                <div id="day6"></div>
-                <div id="temp6low"></div>
-                <div id="temp6high"></div>
-                <img id="weather-icon6" src="" alt="">
-                <div id="weather-condition6"></div>
-                <div id="humidity6"></div>
-                <div id="wind6"></div>
-            </div>
-            <div id="date7">
-                <div id="day7"></div>
-                <div id="temp7low"></div>
-                <div id="temp7high"></div>
-                <img id="weather-icon7" src="" alt="">
-                <div id="weather-condition7"></div>
-                <div id="humidity7"></div>
-                <div id="wind7"></div>
-            </div>
-        </div>
+        <h1>7-Day Forecast</h1>
+        <div id="forecast-container"></div>
     </section>
+    <footer>
+        <figure>
+            <img id="logo" src="./assets/wclogo.webp" alt="">
+        </figure>
+    </footer>
 
     <script src="script.js"></script>
 </body>
